--- a/extracredits/composer.json
+++ b/extracredits/composer.json
@@ -18,7 +18,9 @@
         "laravel/tinker": "^2.0",
         "laravel/ui": "^2.1",
         "livewire/livewire": "^2.2",
-        "spatie/laravel-permission": "^3.13"
+        "maatwebsite/excel": "^3.1",
+        "spatie/laravel-permission": "^3.13",
+        "stripe/stripe-php": "^7.67"
     },
     "require-dev": {
         "barryvdh/laravel-debugbar": "^3.4",
